--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,30 +13,30 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-10 Sun 15:02]
+#+CAPTION: Clock summary at [2017-12-10 Sun 21:15]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *64:09* |       |       | 100.0 |
+| *Total time*                                                                | *64:28* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 64:09   |       |       | 100.0 |
-| Active                                                                      |         | 64:09 |       | 100.0 |
+| Stories                                                                     | 64:28   |       |       | 100.0 |
+| Active                                                                      |         | 64:28 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   1.6 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:23 |   3.7 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   0.9 |
 | COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  13.5 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  21.4 |
-| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   3.7 |
-| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  25.0 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  21.3 |
+| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   3.6 |
+| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  24.9 |
 | COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.6 |
 | COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   3.1 |
 | COMPLETED Add some kind of identity to exomodels                            |         |       |  0:12 |   0.3 |
 | COMPLETED Clean up tagged values                                            |         |       |  0:23 |   0.6 |
 | COMPLETED Simplify input model generation in cmake                          |         |       |  0:38 |   1.0 |
 | COMPLETED Create a =probing= model                                          |         |       |  1:22 |   2.1 |
-| COMPLETED Create the =external= model                                       |         |       |  5:07 |   8.0 |
+| COMPLETED Create the =external= model                                       |         |       |  5:07 |   7.9 |
 | COMPLETED Rename =yarn.json= to =external.json=                             |         |       |  1:51 |   2.9 |
-| COMPLETED Rename =yarn.dia= to =external.dia=                               |         |       |  2:24 |   3.7 |
+| COMPLETED Rename =yarn.dia= to =external.dia=                               |         |       |  2:43 |   4.2 |
 | STARTED Finish setting up coveralls                                         |         |       |  2:57 |   4.6 |
 | STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   1.6 |
 | STARTED Investigate current implementation of the origin transform          |         |       |  0:18 |   0.5 |
@@ -510,6 +510,7 @@ As per analysis story, we are moving away from the sewing terms.
 
 *** COMPLETED Rename =yarn.dia= to =external.dia=                     :story:
     CLOSED: [2017-12-10 Sun 15:02]
+    CLOCK: [2017-12-10 Sun 20:55]--[2017-12-10 Sun 21:14] =>  0:19
     CLOCK: [2017-12-10 Sun 15:00]--[2017-12-10 Sun 15:02] =>  0:02
     CLOCK: [2017-12-10 Sun 14:51]--[2017-12-10 Sun 14:59] =>  0:08
     CLOCK: [2017-12-10 Sun 00:56]--[2017-12-10 Sun 01:12] =>  0:16
@@ -613,6 +614,10 @@ Once the =external= model has been created, we need to replace the
 legacy exomodel related transforms; and once that is done, we need to
 remove all of the legacy code.
 
+*** Update =yarn.dia= traits to external                              :story:
+
+We renamed the model but did not update the traits.
+
 *** Add support for "ad-hoc" probing                                  :story:
 
 We have a set of inputs supplied to the prober called "initial
@@ -627,7 +632,7 @@ Its a bit silly to name classes =x_transform= and then to have their
 main method also called =transform=. We should rename these to
 something like =apply=.
 
-*** Clean up exoelement                                               :story:
+*** Clean up external element                                         :story:
 
 Need to add: can_be_primitive_underlier, in_global_module,
 can_be_enumeration_underlier, is_default_enumeration_type,
