--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,31 +13,31 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-21 Thu 22:02]
+#+CAPTION: Clock summary at [2017-12-21 Thu 22:20]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *72:31* |       |       | 100.0 |
+| *Total time*                                                                | *72:48* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 72:31   |       |       | 100.0 |
-| Active                                                                      |         | 72:31 |       | 100.0 |
+| Stories                                                                     | 72:48   |       |       | 100.0 |
+| Active                                                                      |         | 72:48 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   1.4 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:46 |   3.8 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   0.8 |
-| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  12.0 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  18.9 |
+| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  11.9 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  18.8 |
 | COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   3.2 |
-| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  22.1 |
+| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  22.0 |
 | COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.6 |
-| COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   2.8 |
+| COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   2.7 |
 | COMPLETED Add some kind of identity to exomodels                            |         |       |  0:12 |   0.3 |
 | COMPLETED Clean up tagged values                                            |         |       |  0:23 |   0.5 |
 | COMPLETED Simplify input model generation in cmake                          |         |       |  0:38 |   0.9 |
 | COMPLETED Create a =probing= model                                          |         |       |  1:22 |   1.9 |
-| COMPLETED Create the =external= model                                       |         |       |  5:07 |   7.1 |
-| COMPLETED Rename =yarn.json= to =external.json=                             |         |       |  1:51 |   2.6 |
+| COMPLETED Create the =external= model                                       |         |       |  5:07 |   7.0 |
+| COMPLETED Rename =yarn.json= to =external.json=                             |         |       |  1:51 |   2.5 |
 | COMPLETED Rename =yarn.dia= to =external.dia=                               |         |       |  2:43 |   3.7 |
-| COMPLETED Make =dogen= part of model modules                                |         |       |  3:27 |   4.8 |
+| COMPLETED Make =dogen= part of model modules                                |         |       |  3:27 |   4.7 |
 | COMPLETED Fix travis build                                                  |         |       |  0:03 |   0.1 |
 | COMPLETED Do a quick hack to fix name resolution                            |         |       |  1:20 |   1.8 |
 | COMPLETED Rename =formatters= to =formatting=                               |         |       |  1:45 |   2.4 |
@@ -45,7 +45,7 @@
 | STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   1.4 |
 | STARTED Investigate current implementation of the origin transform          |         |       |  0:18 |   0.4 |
 | STARTED Remove exomodel and all deprecated classes                          |         |       |  0:40 |   0.9 |
-| STARTED Rename =yarn= to =modeling=                                         |         |       |  1:05 |   1.5 |
+| STARTED Rename =yarn= to =modeling=                                         |         |       |  1:22 |   1.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -672,6 +672,7 @@ legacy exomodel related transforms; and once that is done, we need to
 remove all of the legacy code.
 
 *** STARTED Rename =yarn= to =modeling=                               :story:
+    CLOCK: [2017-12-21 Thu 22:03]--[2017-12-21 Thu 22:20] =>  0:17
     CLOCK: [2017-12-21 Thu 20:57]--[2017-12-21 Thu 22:02] =>  1:05
 
 As per analysis story, we are moving away from the sewing terms.
