--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,21 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-21 Thu 22:40]
+#+CAPTION: Clock summary at [2017-12-21 Thu 22:58]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *73:06* |       |       | 100.0 |
+| *Total time*                                                                | *73:24* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 73:06   |       |       | 100.0 |
-| Active                                                                      |         | 73:06 |       | 100.0 |
+| Stories                                                                     | 73:24   |       |       | 100.0 |
+| Active                                                                      |         | 73:24 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   1.4 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:46 |   3.8 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   0.8 |
-| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  11.9 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  18.8 |
+| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  11.8 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  18.7 |
 | COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   3.2 |
-| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  22.0 |
+| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  21.9 |
 | COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.6 |
 | COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   2.7 |
 | COMPLETED Add some kind of identity to exomodels                            |         |       |  0:12 |   0.3 |
@@ -41,7 +41,7 @@
 | COMPLETED Fix travis build                                                  |         |       |  0:03 |   0.1 |
 | COMPLETED Do a quick hack to fix name resolution                            |         |       |  1:20 |   1.8 |
 | COMPLETED Rename =formatters= to =formatting=                               |         |       |  1:45 |   2.4 |
-| COMPLETED Rename =yarn= to =modeling=                                       |         |       |  1:40 |   2.3 |
+| COMPLETED Rename =yarn= to =modeling=                                       |         |       |  1:58 |   2.7 |
 | STARTED Finish setting up coveralls                                         |         |       |  2:57 |   4.0 |
 | STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   1.4 |
 | STARTED Investigate current implementation of the origin transform          |         |       |  0:18 |   0.4 |
@@ -585,6 +585,7 @@ As per analysis story, we are moving away from the sewing terms.
 
 *** COMPLETED Rename =yarn= to =modeling=                             :story:
     CLOSED: [2017-12-21 Thu 22:39]
+    CLOCK: [2017-12-21 Thu 22:40]--[2017-12-21 Thu 22:58] =>  0:18
     CLOCK: [2017-12-21 Thu 22:21]--[2017-12-21 Thu 22:39] =>  0:18
     CLOCK: [2017-12-21 Thu 22:03]--[2017-12-21 Thu 22:20] =>  0:17
     CLOCK: [2017-12-21 Thu 20:57]--[2017-12-21 Thu 22:02] =>  1:05
