--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,21 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-21 Thu 22:58]
+#+CAPTION: Clock summary at [2017-12-21 Thu 23:04]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *73:24* |       |       | 100.0 |
+| *Total time*                                                                | *73:29* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 73:24   |       |       | 100.0 |
-| Active                                                                      |         | 73:24 |       | 100.0 |
+| Stories                                                                     | 73:29   |       |       | 100.0 |
+| Active                                                                      |         | 73:29 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   1.4 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:46 |   3.8 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:51 |   3.9 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   0.8 |
 | COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  11.8 |
 | COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  18.7 |
 | COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   3.2 |
-| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  21.9 |
+| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  21.8 |
 | COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.6 |
 | COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   2.7 |
 | COMPLETED Add some kind of identity to exomodels                            |         |       |  0:12 |   0.3 |
@@ -109,6 +109,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 - [[https://gitter.im/DomainDrivenConsulting/dogen][Gitter]]
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2017-12-21 Thu 22:59]--[2017-12-21 Thu 23:04] =>  0:05
     CLOCK: [2017-12-14 Thu 09:08]--[2017-12-14 Thu 09:12] =>  0:04
     CLOCK: [2017-12-10 Sun 21:15]--[2017-12-10 Sun 21:34] =>  0:19
     CLOCK: [2017-12-09 Sat 12:22]--[2017-12-09 Sat 12:32] =>  0:10
@@ -694,10 +695,6 @@ As per analysis story, we are moving away from the sewing terms.
 
 As per analysis story, we are moving away from the sewing terms.
 
-*** Create the =orchestration= model                                  :story:
-
-Create a model with the top-level transforms.
-
 *** Create the =templates= model                                      :story:
 
 As per analysis story, we are moving away from the sewing terms.
@@ -729,11 +726,15 @@ Approach:
 - augment formattables with the new element properties. Supply this
   data via the context or assistant.
 
+*** Create the =orchestration= model                                  :story:
+
+Create a model with the top-level transforms.
+
 *** Clean up UML profiles and meta-data                               :story:
 
 It makes more sense to create a dogen-wide UML profile rather than one
 just specific to yarn/modeling. This means renaming all stereotypes to
-dogen, i.e.: =yarn::object_template= becomes dogen::object_template=
+dogen, i.e.: =yarn::object_template= becomes =dogen::object_template=
 and so forth. Modeling/yarn is just one of the possible
 implementations of the profile.
 
