--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,41 +13,41 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-22 Fri 15:04]
+#+CAPTION: Clock summary at [2017-12-22 Fri 17:32]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *76:17* |       |       | 100.0 |
+| *Total time*                                                                | *77:44* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 76:17   |       |       | 100.0 |
-| Active                                                                      |         | 76:17 |       | 100.0 |
+| Stories                                                                     | 77:44   |       |       | 100.0 |
+| Active                                                                      |         | 77:44 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   1.4 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:51 |   3.7 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   0.8 |
-| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  11.4 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  18.0 |
-| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   3.1 |
-| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  21.0 |
+| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  11.2 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  17.6 |
+| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   3.0 |
+| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  20.6 |
 | COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.5 |
 | COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   2.6 |
 | COMPLETED Add some kind of identity to exomodels                            |         |       |  0:12 |   0.3 |
 | COMPLETED Clean up tagged values                                            |         |       |  0:23 |   0.5 |
 | COMPLETED Simplify input model generation in cmake                          |         |       |  0:38 |   0.8 |
 | COMPLETED Create a =probing= model                                          |         |       |  1:22 |   1.8 |
-| COMPLETED Create the =external= model                                       |         |       |  5:07 |   6.7 |
+| COMPLETED Create the =external= model                                       |         |       |  5:07 |   6.6 |
 | COMPLETED Rename =yarn.json= to =external.json=                             |         |       |  1:51 |   2.4 |
-| COMPLETED Rename =yarn.dia= to =external.dia=                               |         |       |  2:43 |   3.6 |
-| COMPLETED Make =dogen= part of model modules                                |         |       |  3:27 |   4.5 |
+| COMPLETED Rename =yarn.dia= to =external.dia=                               |         |       |  2:43 |   3.5 |
+| COMPLETED Make =dogen= part of model modules                                |         |       |  3:27 |   4.4 |
 | COMPLETED Fix travis build                                                  |         |       |  0:03 |   0.1 |
 | COMPLETED Do a quick hack to fix name resolution                            |         |       |  1:20 |   1.7 |
 | COMPLETED Rename =formatters= to =formatting=                               |         |       |  1:45 |   2.3 |
-| COMPLETED Rename =yarn= to =modeling=                                       |         |       |  1:58 |   2.6 |
+| COMPLETED Rename =yarn= to =modeling=                                       |         |       |  1:58 |   2.5 |
 | COMPLETED Rename =quilt.cpp= to =generation.cpp=                            |         |       |  2:04 |   2.7 |
-| STARTED Finish setting up coveralls                                         |         |       |  2:57 |   3.9 |
+| COMPLETED Rename =quilt.csharp= to =generation.csharp=                      |         |       |  2:11 |   2.8 |
+| STARTED Finish setting up coveralls                                         |         |       |  2:57 |   3.8 |
 | STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   1.4 |
 | STARTED Investigate current implementation of the origin transform          |         |       |  0:18 |   0.4 |
 | STARTED Remove exomodel and all deprecated classes                          |         |       |  0:40 |   0.9 |
-| STARTED Rename =quilt.csharp= to =generation.csharp=                        |         |       |  0:44 |   1.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -608,6 +608,13 @@ Tasks:
 
 As per analysis story, we are moving away from the sewing terms.
 
+*** COMPLETED Rename =quilt.csharp= to =generation.csharp=            :story:
+    CLOSED: [2017-12-22 Fri 17:32]
+    CLOCK: [2017-12-22 Fri 15:05]--[2017-12-22 Fri 16:32] =>  1:27
+    CLOCK: [2017-12-22 Fri 14:20]--[2017-12-22 Fri 15:04] =>  0:44
+
+As per analysis story, we are moving away from the sewing terms.
+
 *** STARTED Finish setting up coveralls                               :story:
     CLOCK: [2017-11-29 Wed 23:48]--[2017-11-30 Thu 00:21] =>  0:33
     CLOCK: [2017-11-29 Wed 22:45]--[2017-11-29 Wed 23:47] =>  1:02
@@ -695,11 +702,6 @@ flight as we transform from exomodel to endomodel.
 Once the =external= model has been created, we need to replace the
 legacy exomodel related transforms; and once that is done, we need to
 remove all of the legacy code.
-
-*** STARTED Rename =quilt.csharp= to =generation.csharp=              :story:
-    CLOCK: [2017-12-22 Fri 14:20]--[2017-12-22 Fri 15:04] =>  0:44
-
-As per analysis story, we are moving away from the sewing terms.
 
 *** Create the =templating= model                                     :story:
 
