--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,30 +13,30 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-22 Fri 17:45]
+#+CAPTION: Clock summary at [2017-12-22 Fri 21:42]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *78:14* |       |       | 100.0 |
+| *Total time*                                                                | *78:53* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 78:14   |       |       | 100.0 |
-| Active                                                                      |         | 78:14 |       | 100.0 |
+| Stories                                                                     | 78:53   |       |       | 100.0 |
+| Active                                                                      |         | 78:53 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   1.3 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:51 |   3.6 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   0.7 |
-| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  11.1 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  17.5 |
+| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  11.0 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  17.4 |
 | COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   3.0 |
-| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  20.5 |
+| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  20.3 |
 | COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.5 |
-| COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   2.6 |
+| COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   2.5 |
 | COMPLETED Add some kind of identity to exomodels                            |         |       |  0:12 |   0.3 |
 | COMPLETED Clean up tagged values                                            |         |       |  0:23 |   0.5 |
 | COMPLETED Simplify input model generation in cmake                          |         |       |  0:38 |   0.8 |
 | COMPLETED Create a =probing= model                                          |         |       |  1:22 |   1.7 |
 | COMPLETED Create the =external= model                                       |         |       |  5:07 |   6.5 |
-| COMPLETED Rename =yarn.json= to =external.json=                             |         |       |  1:51 |   2.4 |
-| COMPLETED Rename =yarn.dia= to =external.dia=                               |         |       |  2:43 |   3.5 |
+| COMPLETED Rename =yarn.json= to =external.json=                             |         |       |  1:51 |   2.3 |
+| COMPLETED Rename =yarn.dia= to =external.dia=                               |         |       |  2:43 |   3.4 |
 | COMPLETED Make =dogen= part of model modules                                |         |       |  3:27 |   4.4 |
 | COMPLETED Fix travis build                                                  |         |       |  0:03 |   0.1 |
 | COMPLETED Do a quick hack to fix name resolution                            |         |       |  1:20 |   1.7 |
@@ -44,11 +44,11 @@
 | COMPLETED Rename =yarn= to =modeling=                                       |         |       |  1:58 |   2.5 |
 | COMPLETED Rename =quilt.cpp= to =generation.cpp=                            |         |       |  2:04 |   2.6 |
 | COMPLETED Rename =quilt.csharp= to =generation.csharp=                      |         |       |  2:11 |   2.8 |
-| STARTED Finish setting up coveralls                                         |         |       |  2:57 |   3.8 |
+| STARTED Finish setting up coveralls                                         |         |       |  2:57 |   3.7 |
 | STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   1.3 |
 | STARTED Investigate current implementation of the origin transform          |         |       |  0:18 |   0.4 |
-| STARTED Remove exomodel and all deprecated classes                          |         |       |  0:40 |   0.9 |
-| STARTED Create the =templating= model                                       |         |       |  0:30 |   0.6 |
+| STARTED Remove exomodel and all deprecated classes                          |         |       |  0:40 |   0.8 |
+| STARTED Create the =templating= model                                       |         |       |  1:09 |   1.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -705,6 +705,7 @@ legacy exomodel related transforms; and once that is done, we need to
 remove all of the legacy code.
 
 *** STARTED Create the =templating= model                             :story:
+    CLOCK: [2017-12-22 Fri 21:03]--[2017-12-22 Fri 21:42] =>  0:39
     CLOCK: [2017-12-22 Fri 17:15]--[2017-12-22 Fri 17:45] =>  0:30
 
 As per analysis story, we are moving away from the sewing terms.
